--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Seurat';
+  src: url('./assets/fonts/FOT-Seurat\ Pro\ EB.otf')
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'RodinRose';
+  src: url('./assets/fonts/FOT-RodinRose\ Pro\ B.otf')
+}
+
+@font-face {
+  font-family: 'RodinRoseEB';
+  src: url('./assets/fonts/FOT-RodinRose\ Pro\ EB.otf')
+}
+
+@layer base {
+  * {
+    @apply font-seurat box-border m-0 p-0 text-brown transition-all
+  }
+
+  html {
+    @apply bg-lightBlue
+  }
+
+  h1 {
+    @apply text-2xl
+  }
+
+  a {
+    @apply text-lg
+  }
+
+  p {
+    @apply text-base
+  }
+
+  button {
+    @apply bg-yellow px-6 py-2 rounded-3xl
+  }
+
+  li {
+    @apply border-b-[1px] py-2
+  }
+
+  input {
+    @apply outline-none
+  }
+
+  input[type="checkbox"] {
+    @apply w-5 h-5 appearance-none rounded-full border-2 border-brown opacity-10 checked:opacity-100 hover:cursor-pointer
+  }
+
+  .navItem-hover {
+    @apply w-full h-4 bg-darkYellow mt-[-0.75rem] absolute rounded-xl hidden group-hover:block z-[-1]
+  }
 }
